--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+
+
+
 :root {
   --okean: #404bbf;
   --Iris: #4d5ae5;
@@ -1049,43 +1052,48 @@ min-width: 165px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100%;
   padding-top: 112px;
   padding-bottom: 112px;
+  max-width: 1440px;
 }
-@media screen and (min-width: 320px) and (min-resolution: 192dpi) {
+@media (min-resolution: 192dpi) {
+  .main-section{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/dark-bgmob-2.jpg);
+  }
+}
+/* @media screen and (min-width: 320px) and (min-resolution: 192dpi) {
   .main-section {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/dark-bgmob-2.jpg);
   }
-}
+} */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 428px) {
   .main-section {
-    max-width: 768px;
     padding-top: 112px;
     padding-bottom: 112px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/dark-bgtab.jpg);
   }
 }
-@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+@media screen and (min-width: 428px) and (min-resolution: 192dpi) {
   .main-section {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/dark-bgtab-2.jpg);
   }
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .main-section {
-    max-width: 1440px;
+    
     padding-top: 188px;
     padding-bottom: 188px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/people-office1-2.jpg);
   }
 }
-@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
   .main-section {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/people-office1des-2.jpg);
